--- a/style.css
+++ b/style.css
@@ -1,8 +1,32 @@
-div {
+.div1, .div2, .div3 {
     background: #7394f0;
-    color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1.5em;
     border: 4px solid #302d2d;
+    height: 500px;
+}
 
+.div1 div {
+    height: 500px;
+    background: #f7f7a4;
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.div1 {
+    background: #8f428f;
+    flex-grow: 2;
+    order: 3;
+    display: flex;
+    justify-content: space-between;
+}
+
+.div2 {
+    flex-grow: 1;
+}
+
+.div3 {
+    flex-grow: 1;
 }
